--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -9,25 +9,17 @@ jobs:
   build:
     name: Build and Test
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./app
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Set up Flutter
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
-          channel: 'stable'       
+          channel: stable
+          flutter-version: 3.19.0
+      - run: |
+          flutter pub get
+          flutter analyze
+          flutter test
 
-      - name: Install dependencies
-        run: flutter pub get
-
-      - name: Analyze code
-        run: flutter analyze
-
-      - name: Run tests
-        run: flutter test
