--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -18,7 +18,8 @@ jobs:
         with:
           channel: stable
           flutter-version: 3.19.0
-      - run: |
+        working-directory: ./app
+        run: |
           flutter pub get
           flutter analyze
           flutter test
