--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "test": "echo \"Error: no test specified\" && exit 0"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "hono": "^4.3.0"
   },
   "devDependencies": {
