--- a/app/.vscode/settings.json
+++ b/app/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-	"java.compile.nullAnalysis.mode": "disabled"
+	"java.compile.nullAnalysis.mode": "disabled",
+	"cSpell.words": [
+		"confirmpassword",
+		"firstname",
+		"lastname",
+		"Signup"
+	]
 }
