--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,22 @@
 {
   "scripts": {
-    "dev": "bun run --hot src/index.ts",
+    "dev": "bun run --hot index.ts",
     "lint": "bunx eslint . --fix",
     "test": "echo \"Error: no test specified\" && exit 0"
   },
   "dependencies": {
+    "@prisma/client": "5.13.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
-    "hono": "^4.3.0"
+    "hono": "^4.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^5.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/bun": "latest",
+    "@types/jsonwebtoken": "^9.0.6",
     "eslint": "^9.2.0",
     "globals": "^15.1.0",
     "typescript-eslint": "^7.8.0"
