--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   shared_preferences: ^2.2.3
+  dio: ^5.4.3+1
+  dotenv: ^4.2.0
 
   slide_to_act: any
 dev_dependencies:
