--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -36,15 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.6
   shared_preferences: ^2.2.3
 
+  slide_to_act: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
