--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   shared_preferences: ^2.2.3
   dio: ^5.4.3+1
-  dotenv: ^4.2.0
+  flutter_dotenv: ^5.1.0
 
   slide_to_act: any
 dev_dependencies:
