--- a/server/dockerfile
+++ b/server/dockerfile
@@ -2,6 +2,8 @@
 # see all versions at https://hub.docker.com/r/oven/bun/tags
 FROM oven/bun:1
 
+COPY . .
+
 RUN bun install
 RUN bunx prisma db pull
 RUN bunx prisma generate
