--- a/server/dockerfile
+++ b/server/dockerfile
@@ -1,13 +1,12 @@
 # use the official Bun image
 # see all versions at https://hub.docker.com/r/oven/bun/tags
-FROM oven/bun:1
+FROM node:alpine
 
 COPY . .
-COPY ./prisma prisma
 
-RUN bun install
+RUN npm i
 
-RUN bun run prisma
+RUN npx prisma generate
 
 EXPOSE 8000
-ENTRYPOINT [ "bun", "run", "prisma", "&&", "bun", "run", "start" ]
+ENTRYPOINT [ "node", "index.js" ]
