--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
     "dotenv": "^16.4.5",
     "hono": "^4.3.0",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.13.0"
+    "prisma": "^5.13.0",
+    "typescript": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
@@ -25,8 +26,5 @@
   },
   "name": "server",
   "module": "index.ts",
-  "type": "module",
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  }
+  "type": "module"
 }
