--- a/server/dockerfile
+++ b/server/dockerfile
@@ -4,12 +4,8 @@ FROM oven/bun:latest
 
 COPY . .
 
-# RUN npm i -omit=dev
 RUN bun install
 
-# RUN npx prisma generate
-RUN bunx prisma db pull
-RUN bunx prisma generate
 
 EXPOSE 8000
-ENTRYPOINT [ "bun", "run", "index.ts" ]
+ENTRYPOINT [ "bash", "run.sh" ]
