--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 0"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.572.0",
+    "@hono-storage/core": "^0.0.9",
+    "@hono-storage/s3": "^0.0.8",
     "@prisma/client": "5.13.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
