--- a/server/dockerfile
+++ b/server/dockerfile
@@ -1,11 +1,8 @@
-FROM oven/bun:latest
-
-COPY ./package.json .
-
-RUN bun install
+FROM oven/bun:1.1.7
 
 COPY . .
 
+RUN bun install
 RUN bunx prisma db pull
 RUN bunx prisma generate
 
