--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
     "start": "bun run index.ts",
     "lint": "bunx eslint . --fix",
     "test": "echo \"Error: no test specified\" && exit 0",
-    "buildnode": "bun build ./index.ts --outdir ./build/node --target node",
-    "build": "bun build ./index.ts --outdir ./build/bun --target bun"
+    "buildnode": "bun build ./index.ts --outdir . --target node",
+    "build": "bun build ./index.ts --outdir . --target bun"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.572.0",
