--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "dev": "bun run --hot index.ts",
-    "prisma": "bunx prisma generate",
+    "prisma": "bunx prisma db pull && bunx prisma generate",
     "start": "bun run index.ts",
     "lint": "bunx eslint . --fix",
     "test": "echo \"Error: no test specified\" && exit 0",
