--- a/server/dockerfile
+++ b/server/dockerfile
@@ -1,26 +1,15 @@
-FROM node:alpine as install
+FROM oven/bun:latest as install
 
-COPY package.json .
+COPY package*.json .
+COPY bun.lockb .
+RUN bun install
 
-RUN npm install
-
-FROM oven/bun as build
+FROM install as runner
 
 COPY . .
-
 COPY --from=install node_modules node_modules
 
-RUN bun run buildnode
-
-FROM install as production
-
-COPY --from=build ./index.js .
-
-COPY --from=install node_modules .
-
-COPY prisma ./prisma
-
-RUN npx prisma generate
+RUN bun prisma
 
 EXPOSE 8000
-ENTRYPOINT [ "node", "index.js" ]
+ENTRYPOINT [ "bun", "start" ]
