--- a/server/package.json
+++ b/server/package.json
@@ -7,25 +7,20 @@
     "build": "bun build ./index.ts --outdir . --target bun"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.572.0",
-    "@hono-storage/core": "^0.0.9",
-    "@hono-storage/s3": "^0.0.8",
     "@prisma/client": "^5.13.0",
-    "aws-sdk": "^2.1617.0",
     "bcrypt": "^5.1.1",
-    "child_process": "^1.0.2",
     "dotenv": "^16.4.5",
     "hono": "^4.3.0",
     "jsonwebtoken": "^9.0.2",
-    "mock-aws-s3": "^4.0.2",
-    "nock": "^13.5.4",
     "prisma": "^5.13.0",
+    "sharp": "^0.33.3",
     "typescript": "^5.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/bun": "latest",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/uuid": "^9.0.8",
     "globals": "^15.1.0"
   },
   "name": "server",
