--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -28,8 +28,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
   flutter:
     sdk: flutter
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,6 +41,8 @@ dependencies:
   flutter_dotenv: ^5.1.0
 
   slide_to_act: any
+  image_picker: ^1.1.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
