--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -34,11 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  awesome_notifications: ^0.9.3+1
   shared_preferences: ^2.2.3
   dio: ^5.4.3+1
   flutter_dotenv: ^5.1.0
-
   slide_to_act: any
+  image_picker: ^1.1.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
