--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   slide_to_act: any
   image_picker: ^1.1.1
   google_maps_flutter: ^2.6.1
+  camera: ^0.11.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
