--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -26,6 +26,7 @@ android {
     namespace "com.example.app"
     compileSdk flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
+    compileSdkVersion 31
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
