--- a/app/ios/Runner/Info.plist
+++ b/app/ios/Runner/Info.plist
@@ -6,6 +6,10 @@
 	<string>This app needs access to camera when used</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This app needs access to microphone when used</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app needs access to location when open.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This app needs access to location when in the background.</string>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
 	<key>CFBundleDevelopmentRegion</key>
@@ -49,5 +53,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Reason why we need access to your location</string>
 </dict>
 </plist>
