--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   image_picker: ^1.1.1
   google_maps_flutter: ^2.6.1
   camera: ^0.11.0
+  geolocator: ^11.0.0
+  geocoding: ^3.0.0
+  location: ^6.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
