--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_picker: ^1.1.1
   google_maps_flutter: ^2.6.1
   camera: ^0.11.0
+  permission_handler: ^11.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
