--- a/app/android/app/src/main/AndroidManifest.xml
+++ b/app/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
         android:label="app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyC4YC0KY2WqBivTTuYzdAfdIq8S9R8L-yY"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
