--- a/app/ios/Runner/Info.plist
+++ b/app/ios/Runner/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs access to photos</string>
+	<key>PermissionGroupNotification</key>
+	<string>Allow watchout to send you notifications</string>
 	<key>NSCameraUsageDescription</key>
 	<string>This app needs access to camera when used</string>
 	<key>NSMicrophoneUsageDescription</key>
